--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@
         </div>
         <div class="container">
           <br><br>
-          <div class="row justify-content-center">
+          <!-- <div class="row justify-content-center">
             <div class="col-md-7 ftco-animate text-center">
               <h2>Have a<span> Question? </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
             </div>
-          </div>
+          </div> -->
           <br>
           <ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
             <li class="ftco-animate normal-txt">Find me on</li>
@@ -347,7 +347,7 @@
         </div>
       </div>
     </section>
-    <footer class="ftco-footer ftco-section">
+    <!-- <footer class="ftco-footer ftco-section">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
@@ -359,7 +359,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div id="ftco-loader" class="show fullscreen">
       <svg class="circular" width="48px" height="48px">
         <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
