Added proper details and more projects

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ritesh Gangthade Portfolio</title>
+    <title>Ritesh Gangthade | Software Engineer | Java, Spring Boot, AWS Expert</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Ritesh Gangthade is a Software Engineer with expertise in Java, Spring Boot, REST API development, AWS Cloud, and enterprise application migration. Explore projects, skills, resume, and contact information.">
+    <meta name="keywords" content="Ritesh Gangthade, Software Engineer, Java Developer, Spring Boot, AWS, REST APIs, Cloud Integration, Pune, Enterprise Application, Backend Developer, Compak Rating Engine, AgroBeet Farmer Connect, Razorpay Integration">
+    <meta property="og:title" content="Ritesh Gangthade | Software Engineer | Java, Spring Boot, AWS Expert">
+    <meta property="og:description" content="Portfolio of Ritesh Gangthade – Java Backend Developer, Spring Boot Expert, Cloud Integration Specialist">
+    <meta property="og:image" content="images/about-me1.png">
+    <meta property="og:url" content="https://riteshgangthade.github.io">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -85,7 +91,7 @@
                   <br><br>
                   <h2>Software Engineer</h2>
                   <p>
-                    <a href="https://github.com/RiteshGangthade" class="btn btn-white btn-outline-white py-3 px-4">My Works</a>
+                    <a href="https://github.com/RiteshGangthade" class="btn btn-white btn-outline-white py-3 px-4" target="_blank" rel="noopener noreferrer">My Works</a>
                   </p>
                 </div>
               </div>
@@ -104,7 +110,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="images/about-me1.png" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="images/about-me1.png" class="img-fluid rounded b-shadow-a" alt="Photo of Ritesh Gangthade">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -140,29 +146,19 @@
                   <h1 class="big">About</h1>
                   <h2 class="mb-4">About Me</h2>
                   <p>
-                    B.Tech in Computer Science & Engineering with hands-on experience building enterprise-grade applications using Java, Spring, and Spring Boot. 
-                    Contributed to real-world projects across diverse domains — Retail/AgriTech (AgroBeet Farmer Connect), and Insurance (Compak Rating Engine).
-                    Strong focus on scalable architecture, API development, cloud integrations, and data consistency practices.
+                    Software Engineer specializing in enterprise application development using Java, Spring Boot, and cloud technologies (AWS). Proven experience delivering robust API integrations, .NET-to-Java migration, and scalable backend systems for insurance and agri-tech industries. Focused on cloud integration, legacy system compatibility, and best practices for high performance and reliability.
                   </p>
                   <ul class="about-info mt-4 px-md-0 px-2">
                     <li class="d-flex"><span>Profile:</span> <span>Backend Engineering, REST APIs, Cloud Integration</span></li>
                     <li class="d-flex"><span>Domains:</span> <span>Retail/AgriTech, Insurance</span></li>
                     <li class="d-flex"><span>Education:</span> <span>B.Tech in Computer Science & Engineering</span></li>
                     <li class="d-flex"><span>Languages:</span> <span>Java, SQL, HTML, CSS, JavaScript</span></li>
-                    <li class="d-flex"><span>Frameworks:</span> <span>Spring, Spring Boot, JSP, Bootstrap</span></li>
+                    <li class="d-flex"><span>Frameworks:</span> <span>Spring, Spring Boot, Spring Batch, JSP, Bootstrap</span></li>
                     <li class="d-flex"><span>Database:</span> <span>MySQL, Oracle</span></li>
+                    <li class="d-flex"><span>Cloud:</span> <span>AWS (S3, RDS, SQS, SNS, EC2)</span></li>
                     <li class="d-flex"><span>Tools:</span> <span>IntelliJ, Eclipse, VS Code, Power BI, Postman, Git, JHipster, TOAD</span></li>
-                    <li class="d-flex"><span>Other Skills:</span> <span>REST API Development, MVC Architecture, TDD</span></li>
+                    <li class="d-flex"><span>Other Skills:</span> <span>REST API Development, MVC Architecture, TDD, Integrations</span></li>
                   </ul>
-                </div>
-              </div>
-              <div class="counter-wrap ftco-animate d-flex mt-md-3">
-                <div class="text">
-                  <p class="mb-4">
-                    <span class="number" data-number="5">0</span> <span>+</span>
-                    <span>&nbsp; Projects completed</span>
-                  </p>
-                  <p><a href="https://www.linkedin.com/in/ritesh-gangthade" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
                 </div>
               </div>
             </div>
@@ -176,7 +172,9 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
             <h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>B.Tech in Computer Science & Engineering with hands-on experience in building enterprise-grade applications using Java, Spring, and Spring Boot. Contributed to real-world projects across diverse domains — Retail/AgriTech (AgroBeet Farmer Connect), and Insurance (Compak Rating Engine). Strong focus on scalable architecture, API development, cloud integrations, and data consistency practices.</p>
+            <p>
+              Software Engineer with hands-on experience in enterprise application development using Java, Spring Boot, and cloud technologies. Delivered migration, integration, and API solutions for Insurance and Retail/AgriTech projects. Strong focus on scalability, legacy system compatibility, and modern best practices.
+            </p>
           </div>
         </div>
         <div class="row">
@@ -192,14 +190,12 @@
               <span class="position">MultiGenesys Software Pvt Ltd, Pune</span>
               <p class="mt-4">
                 <ul>
-                  <li>Worked on enterprise-level projects — AgroBeet Farmer Connect (Retail/AgriTech), and Compak Rating Engine (Insurance) — handling backend development.</li>
-                  <li>Designed and implemented robust REST APIs using Spring Boot, ensuring high performance and scalability.</li>
-                  <li>Worked on .NET to Java migration of insurance coverages in Compak Rating Engine and implemented HashMap-based caching for optimized rating lookup.</li>
-                  <li>Developed and tested policy rating modules using valid past data, following test-driven development (TDD) principles for accuracy.</li>
-                  <li>Integrated Meta WhatsApp Business APIs, enabling real-time event handling and communication across systems.</li>
-                  <li>Utilized Spring Batch to process bulk asynchronous operations, enhancing throughput and responsiveness.</li>
-                  <li>Managed cloud media storage via AWS S3 buckets, ensuring secure and reliable file management.</li>
-                  <li>Applied Liquibase for DB schema versioning and smooth migrations across environments.</li>
+                  <li>Designed and implemented scalable REST APIs using Spring Boot for enterprise-grade insurance and agri-tech solutions.</li>
+                  <li>Led .NET to Java migration for Compak Rating Engine, ensuring legacy system compatibility and logic accuracy.</li>
+                  <li>Built and optimized rating modules using HashMap-based caching, enhancing performance and data integrity.</li>
+                  <li>Integrated Meta WhatsApp Business API and managed AWS S3 for secure media storage.</li>
+                  <li>Utilized Spring Batch for asynchronous processing and Liquibase for database migrations across environments.</li>
+                  <li>Applied TDD principles and managed Oracle/MySQL databases for robust data operations.</li>
                 </ul>
               </p>
             </div>
@@ -237,7 +233,7 @@
         </div>
         <div class="row justify-content-center mt-5">
           <div class="col-md-6 text-center ftco-animate">
-            <p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+            <p><a href="Ritesh_Gangthade.pdf" class="btn btn-primary py-4 px-5" target="_blank" rel="noopener noreferrer">Download CV</a></p>
           </div>
         </div>
       </div>
@@ -248,34 +244,67 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Some of the key projects demonstrating backend, REST API, and cloud integration skills:</p>
+            <p>Some of the key projects demonstrating backend, REST API, cloud, and payment integration skills:</p>
           </div>
         </div>
         <div class="row d-flex">
+          <!-- Project 1: Compak Rating Engine -->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="https://github.com/RiteshGangthade/CompakRatingEngine" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');"></a>
+              <a href="https://github.com/RiteshGangthade/CompakRatingEngine" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');" alt="Compak Rating Engine"></a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/RiteshGangthade/CompakRatingEngine">Compak Rating Engine (Insurance Rating Software)</a></h3>
-                <p>Migrated multiple insurance coverages from .NET to Java, maintaining rating accuracy and logic consistency. Implemented efficient HashMap-based caching to boost performance and validated premium calculations using Oracle DB and TOAD UI.</p>
+                <h3 class="heading"><a href="https://github.com/RiteshGangthade/CompakRatingEngine" target="_blank" rel="noopener noreferrer">Compak Rating Engine (Insurance Rating Software)</a></h3>
+                <p>
+                  Insurance rating software migrated from .NET to Java. Delivered highly accurate and consistent rating logic, leveraging efficient HashMap-based caching and Oracle DB validation. Ensured seamless integration and legacy system compatibility.
+                </p>
               </div>
             </div>
           </div>
+          <!-- Project 2: AgroBeet Farmer Connect -->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry justify-content-end">
-              <a href="https://github.com/RiteshGangthade/AgroBeetFarmerConnect" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');"></a>
+              <a href="https://github.com/RiteshGangthade/AgroBeetFarmerConnect" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');" alt="AgroBeet Farmer Connect"></a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/RiteshGangthade/AgroBeetFarmerConnect">AgroBeet Farmer Connect</a></h3>
-                <p>Designed and developed core modules using Spring Boot, Liquibase, and JHipster. Created scalable REST APIs, integrated AWS S3 for media handling, and enabled real-time alerts via WhatsApp API. Emphasized error logging and robust API validation.</p>
+                <h3 class="heading"><a href="https://github.com/RiteshGangthade/AgroBeetFarmerConnect" target="_blank" rel="noopener noreferrer">AgroBeet Farmer Connect</a></h3>
+                <p>
+                  Developed core backend modules for an agri-tech platform using Spring Boot and AWS S3. Integrated WhatsApp Business API for real-time alerts and used JHipster for rapid scaffolding. Focused on structured error logging and cloud scalability.
+                </p>
               </div>
             </div>
           </div>
+          <!-- Project 3: TechBlog -->
           <div class="col-md-4 d-flex ftco-animate">
             <div class="blog-entry">
-              <a href="https://github.com/RiteshGangthade/TechBlog" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');"></a>
+              <a href="https://github.com/RiteshGangthade/TechBlog" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');" alt="TechBlog"></a>
               <div class="text mt-3 float-right d-block">
-                <h3 class="heading"><a href="https://github.com/RiteshGangthade/TechBlog">TechBlog</a></h3>
-                <p>Developed a secure blogging platform using JSP, Servlet, and Spring Boot with a clean MVC architecture. Enabled CRUD operations, implemented user authentication, and leveraged JDBC & MySQL for persistent data storage.</p>
+                <h3 class="heading"><a href="https://github.com/RiteshGangthade/TechBlog" target="_blank" rel="noopener noreferrer">TechBlog</a></h3>
+                <p>
+                  Blogging platform built with JSP, Servlet, and Spring Boot using MVC architecture. Supports user authentication, CRUD operations, AJAX-powered UI, and persistent data with JDBC/MySQL.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Project 4: Razorpay Payment Integration -->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="#" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');" alt="Razorpay Payment Integration"></a>
+              <div class="text mt-3 float-right d-block">
+                <h3 class="heading"><a href="#" target="_blank" rel="noopener noreferrer">Razorpay Payment Gateway Integration</a></h3>
+                <p>
+                  Integrated Razorpay payment gateway with a Spring Boot backend, enabling secure online payments for web applications. Implemented order creation, payment capture, webhook event handling, refunds, and digital receipts. Emphasized secure transaction processing and user data protection with real-time payment status updates and robust exception handling.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Project 5: AWS S3, SQS, SNS, RDS Integration -->
+          <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry justify-content-end">
+              <a href="#" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');" alt="AWS Cloud Integration"></a>
+              <div class="text mt-3 float-right d-block">
+                <h3 class="heading"><a href="#" target="_blank" rel="noopener noreferrer">AWS Cloud Integration (S3, SQS, SNS, RDS)</a></h3>
+                <p>
+                  Engineered robust cloud-native integrations using AWS services and Spring Boot. Automated file storage and retrieval with Amazon S3, implemented message-driven workflows with SQS, and real-time notifications via SNS. Utilized Amazon RDS (MySQL) for persistent, scalable data storage. Developed production-grade solutions focused on scalability, reliability, and cloud best practices.
+                </p>
               </div>
             </div>
           </div>
@@ -326,40 +355,21 @@
                 <span class="icon-globe"></span>
               </div>
               <h3 class="mb-4">Download Resume</h3>
-              <p><a href="#">Download</a></p>
+              <p><a href="Ritesh_Gangthade.pdf" target="_blank" rel="noopener noreferrer">Download</a></p>
             </div>
           </div>
         </div>
         <div class="container">
           <br><br>
-          <!-- <div class="row justify-content-center">
-            <div class="col-md-7 ftco-animate text-center">
-              <h2>Have a<span> Question? </span> <a href="https://forms.gle/uLaTShUKXraAvHJ77" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
-            </div>
-          </div> -->
-          <br>
           <ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
             <li class="ftco-animate normal-txt">Find me on</li>
-            <li class="ftco-animate"><a href="https://www.linkedin.com/in/ritesh-gangthade"><span class="icon-linkedin"></span></a></li>
-            <li class="ftco-animate"><a href="https://github.com/RiteshGangthade"><span class="icon-github"></span></a></li>
+            <li class="ftco-animate"><a href="https://www.linkedin.com/in/ritesh-gangthade" target="_blank" rel="noopener noreferrer"><span class="icon-linkedin"></span></a></li>
+            <li class="ftco-animate"><a href="https://github.com/RiteshGangthade" target="_blank" rel="noopener noreferrer"><span class="icon-github"></span></a></li>
           </ul>
           <br>
         </div>
       </div>
     </section>
-    <!-- <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <p>
-              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
-              This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i>
-              by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer> -->
     <div id="ftco-loader" class="show fullscreen">
       <svg class="circular" width="48px" height="48px">
         <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/>
