Added proper details and more projects

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
             <p>
               Software Engineer with hands-on experience in enterprise application development using Java, Spring Boot, and cloud technologies. Delivered migration, integration, and API solutions for Insurance and Retail/AgriTech projects. Strong focus on scalability, legacy system compatibility, and modern best practices.
             </p>
+            <div class="row justify-content-center mt-5">
+          <div class="col-md-6 text-center ftco-animate">
+            <p><a href="Ritesh_Gangthade.pdf" class="btn btn-primary py-4 px-5" target="_blank" rel="noopener noreferrer">Download CV</a></p>
+          </div>
+        </div>
           </div>
         </div>
         <div class="row">
@@ -211,29 +216,24 @@
           <div class="col-md-6">
             <div class="resume-wrap ftco-animate">
               <span class="date">2020 – 2024</span>
-              <h2>B.Tech. in Computer Science & Engineering</h2>
+              <h2>B.Tech. in Computer Science </h2>
               <span class="position">SVERI’s College of Engineering, Pandharpur</span>
-              <p class="mt-4">Percentage: 77.00%</p>
+              <p class="mt-4">Distinction</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="resume-wrap ftco-animate">
               <span class="date">2018 – 2020</span>
-              <h2>12th Board</h2>
+              <h2>HSC</h2>
               <span class="position">Sangola Vidyamandir Jr College, Sangola</span>
-              <p class="mt-4">Percentage: 69.84%</p>
+              <p class="mt-4">First Class</p>
             </div>
-            <div class="resume-wrap ftco-animate">
+            <!-- <div class="resume-wrap ftco-animate">
               <span class="date">2018</span>
               <h2>10th Board</h2>
               <span class="position">Manjari High-School, Manjari</span>
               <p class="mt-4">Percentage: 91.80%</p>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center mt-5">
-          <div class="col-md-6 text-center ftco-animate">
-            <p><a href="Ritesh_Gangthade.pdf" class="btn btn-primary py-4 px-5" target="_blank" rel="noopener noreferrer">Download CV</a></p>
+            </div> -->
           </div>
         </div>
       </div>
